--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <li><%= link_to "Serve", root_path, :class => 'notWorking' %></li>
             <li><%= link_to "Stats", stats_path, :class => 'notWorking' %></li>
             <hr>
-            <li class="<%= 'active_bg' if current_page?(departments_path) %>"><%= link_to "Departments", departments_path, :class => 'notWorking' %></li>
+            <li class="<%= 'active_bg' if current_page?(positions_path) || current_page?(departments_path) %>"><%= link_to "Departments", departments_path, :class => 'notWorking' %></li>
             <li><%= link_to "Events", root_path, :class => 'notWorking' %></li>
 
             <h5>Attendance Entry</h5>
