--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -18,13 +18,16 @@
                %>
   </div>
 
-
   <div class="field">
   <%= f.select :part_id,
   Part.all.collect { |u| [u.firstName + " " + u.lastName, u.id] },
                { include_blank: false },
                { class: 'form-control selected' }
                %>
+  </div>
+
+  <div class="field">
+    <%= f.select :position2, options_for_select([["Worker", "Worker"], ["Leader", "Leader"], ["Department Head", "Department Head"]], :selected => @position.position), {:include_blank => true}, {:required => true, :class => 'select'} %>
   </div>
 
 
