--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -5,10 +5,10 @@
     <%= f.text_field :name, :placeholder => 'Department Name', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
-    <%= f.text_field :description, :placeholder => 'Description', :class => 'form-control input-lg' %>
+    <%= f.text_area :description, :placeholder => 'Description', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
-    <%= f.text_field :leaderName, :placeholder => 'Leader Name', :class => 'form-control input-lg' %>
+    <%= f.hidden_field :leaderName, :placeholder => 'Leader Name', :class => 'form-control input-lg' %>
     </div>
 
 <!-- Probably doesn't need -->
@@ -17,7 +17,7 @@
     </div>
 
     <div class="field center">
-      <%= f.submit "Save", :class => "btn-lg btn-primary"%>
+      <%= f.submit "Save", :class => "btn-sm btn-primary"%>
     </div>
   <% end %>
 </div>
