--- a/app/views/parts/_form.html.erb
+++ b/app/views/parts/_form.html.erb
@@ -5,10 +5,10 @@
     <%= f.text_field :title, :placeholder => 'Title', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
-    <%= f.text_field :firstName, :placeholder => 'First Name', :class => 'form-control input-lg' %>
+    <%= f.text_field :firstname, :placeholder => 'First Name', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
-    <%= f.text_field :lastName, :placeholder => 'Last Name', :class => 'form-control input-lg' %>
+    <%= f.text_field :lastname, :placeholder => 'Last Name', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
     <%= f.text_field :allergies, :placeholder => 'Allergies', :class => 'form-control input-lg' %>
