--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -11,8 +11,8 @@
 
 
               <div class="well">
-                <span class = "NA" ><%= p1.firstName %> </span>
-                <span class = "NA" ><%= p1.lastName %></span>
+                <span class = "NA" ><%= p1.firstname %> </span>
+                <span class = "NA" ><%= p1.lastname %></span>
                 <span class = "NA" ><%= p1.backCheck %></span>
                   <%#= link_to "Edit", edit_part_path(p1), :class => "btn-sm btn-warning" %>
                 <%= link_to "Edit", part_path(p1), :class => "btn-sm btn-warning pull-right" %>
