--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -1,4 +1,4 @@
   <!-- <b>Department:</b> -->
   <%#= @position.department.name %>
-  <%#= @position.part.firstName %>
+  <%#= @position.part.firstname %>
   <%#= link_to 'Edit', edit_position_path(@position) %>
