--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -7,8 +7,10 @@
         <div class="h2-white">Department - Show</div>
         <br><br>
 
-        <h3><%= @department.name %> Department
-        </h3><br><!-- family-name-end -->
+        <h3><%= @department.name %>
+          Department
+        </h3><br>
+        <!-- family-name-end -->
         <span class="h5-grey">Description</span>
         <p><%= @department.description %></p>
         <br>
@@ -17,13 +19,13 @@
 
         <!-- Javascript form toggle -->
         <div class="edit_family btn btn-sm btn-warning">Edit Department</div>
-         <div class="edit_f">
-           <%= render "form" %>
-         </div>
+        <div class="edit_f">
+          <%= render "form" %>
+        </div>
 
-      </div> <!-- col end -->
+      </div>
+      <!-- col end -->
       <div class="col-sm-4">
-
 
         <!-- <div class="people-box-search center">
           <h3>Search for People</h3>
@@ -34,7 +36,7 @@
               <%#= submit_tag "Search", :name => nil, class: "btn-search btn-sm btn-primary" %>
             </div>
           </div>  -->
-          <!-- /btn-group -->
+        <!-- /btn-group -->
         <!-- </div> -->
         <!-- /input-group -->
         <%# end %>
@@ -42,63 +44,62 @@
         <%# for part in @searchResultsPeople %>
         <!-- <div class="center grey-bg">
           <div class="family-card-search family-card-search btn tiny-margin"><%#= part.firstname %> <%#= part.lastname %> -->
-            <%#= form_for [@department] do |f| %>
-              <%#= f.hidden_field :leaderName, :value => "#{part.firstname} #{part.lastname}" %>
-              <%#= f.submit "Leader", :class => "btn btn-sm btn-primary"%>
-          <%# end %>
-          <!-- </div>
+        <%#= form_for [@department] do |f| %>
+        <%#= f.hidden_field :leaderName, :value => "#{part.firstname} #{part.lastname}" %>
+        <%#= f.submit "Leader", :class => "btn btn-sm btn-primary"%>
+        <%# end %>
+        <!-- </div>
         </div> -->
         <%# end %>
         <%# end %>
 
-
-
-
-  <!-- SHOWS only positions in this Department -->
-  <div class="people-box">
-  <h4>People in this department</h4><br>
-      <% @positions.each do |position| %>
-      <!-- Filters only this department -->
-        <% if position.department.id === @department.id %>
-        <div class="people-btn">
+        <!-- SHOWS only positions in this Department -->
+        <div class="people-box">
+          <h4>People in this department</h4><br>
+          <% @positions.each do |position| %>
+          <!-- Filters only this department -->
+          <% if position.department.id === @department.id %>
+          <div class="people-btn">
             <span class="grey-btn white">
-             <%= position.part.firstname %> <%= position.part.lastname %>
-             <% if position.position2 === "Worker" %>
-             <%= image_tag("worker.png", :class => "icon-size-tiny")%>
-             <% end %>
-             <% if position.position2 === "Leader" %>
-             <%= image_tag("leader.png", :class => "icon-size-tiny")%>
-             <% end %>
-             <% if position.position2 === "Department Head" %>
-             <%= image_tag("dep_head2.png", :class => "icon-size-tiny")%>
-             <% end %>
+              <%= position.part.firstname %>
+              <%= position.part.lastname %>
+              <% if position.position2 === "Worker" %>
+              <%= image_tag("worker.png", :class => "icon-size-tiny")%>
+              <% end %>
+              <% if position.position2 === "Leader" %>
+              <%= image_tag("leader.png", :class => "icon-size-tiny")%>
+              <% end %>
+              <% if position.position2 === "Department Head" %>
+              <%= image_tag("dep_head2.png", :class => "icon-size-tiny")%>
+              <% end %>
             </span>
             <span class="black">
               <%= link_to "X", position, :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
             </span><br><br>
-            </div>
-        <% end %>
-        <% end %> <!-- Filter end -->
-        <br>
-        <%= link_to 'Add Person', new_position_path, :class => "btn-sm btn-primary" %>
-      </div>
+          </div>
+          <% end %>
+          <% end %>
+          <!-- Filter end -->
+          <br>
+          <%= link_to 'Add Person', new_position_path, :class => "btn-sm btn-primary" %>
+        </div>
 
-
-
-
-<!-- Original Version -->
+        <!-- Original Version -->
         <%# @positions.each do |position| %>
-          <%#= position.department.name %>
-                <%#= position.part.firstname %>
-            <%#= link_to 'Show', position %>
-            <%#= link_to 'Edit', edit_position_path(position) %>
-            <%#= link_to 'Delete', position, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%#= position.department.name %>
+        <%#= position.part.firstname %>
+        <%#= link_to 'Show', position %>
+        <%#= link_to 'Edit', edit_position_path(position) %>
+        <%#= link_to 'Delete', position, method: :delete, data: { confirm: 'Are you sure?' } %>
         <%# end %>
         <%#= link_to 'New Position', new_position_path %>
 
+      </div>
+      <!-- col end -->
+    </div>
+    <!--row end -->
 
-      </div> <!-- col end -->
-    </div> <!--row end -->
-
-  </div><!-- flex-block end -->
-</div><!-- flex-container end -->
+  </div>
+  <!-- flex-block end -->
+</div>
+<!-- flex-container end -->
